--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "20-challenge-react-portfolio",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://github.com/JeramySena/20-challenge-react-portfolio",
+    "homepage": "https://jeramysena.github.io/20-challenge-react-portfolio/",
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.2",
         "@testing-library/react": "^12.1.2",
